Fixing the social buttons on mobile.

--- a/stylesheets/base.css
+++ b/stylesheets/base.css
@@ -152,5 +152,9 @@ footer > div {
     footer div {
         width: 320px; }
     footer div, footer a { display: block; }
+    .twitter-follow-button,
+    .fb-like {
+        display: block;
+        float: none; }
 
 }
